--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
       <section class="section-advantages">
         <div class="container">
-          <h2 class="advantages-title title-hidden" hidden>Advantages</h2>
+          <h2 class="advantages-title visually-hidden" hidden>Advantages</h2>
           <ul class="advantages-list list">
             <li class="item">
               <div class="wrapper">
@@ -376,7 +376,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-info-content">
+        <div class="footer-info-box">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-second-part">Studio</span>
           </a>
@@ -385,8 +385,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-socials-content">
-          <p class="footer-text-medium text">Social media</p>
+        <div class="footer-socials-box">
+          <p class="footer-text-medium text-medium">Social media</p>
           <ul class="footer-socials-list socials-list list">
             <li class="socials-item">
               <a href="" class="socials-link link"
@@ -418,6 +418,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-box">
+          <p class="footer-text-medium text-medium">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label">
+              <input
+                class="footer-form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="footer-form-button button" type="submit">
+              Subscribe
+              <svg class="footer-form-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -427,6 +447,82 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <strong class="modal-title text-medium">
+          Leave your contacts and we will call you back
+        </strong>
+        <form class="modal-form">
+          <label class="modal-form-label">
+            <span class="modal-form-label-text">Name</span>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="name"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#modal-name"></use>
+              </svg>
+            </div>
+          </label>
+          <label for="" class="modal-form-label">
+            <span class="modal-form-label-text">Phone</span>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="phone"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#modal-phone"></use>
+              </svg>
+            </div>
+          </label>
+          <label for="" class="modal-form-label" name="email">
+            <span class="modal-form-label-text">Email</span>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="email"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#modal-email"></use>
+              </svg>
+            </div>
+          </label>
+          <label for="" class="modal-form-label">
+            <span class="modal-form-label-text">Comment</span>
+            <textarea
+              class="modal-form-textarea text-small"
+              name="comment"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label class="modal-form-policy-label">
+            <input
+              class="modal-form-policy-checkbox visually-hidden"
+              type="checkbox"
+              name="policy"
+              value="accept"
+              required
+            />
+            <span class="modal-form-policy-wrapper"
+              ><svg class="modal-form-policy-icon" width="10" height="8">
+                <use href="./images/icons.svg#checkbox"></use>
+              </svg>
+            </span>
+            <span class="modal-form-policy-text text-small"
+              >I accept the terms and conditions of the
+              <a href="" class="modal-form-policy-link">Privacy Policy</a>
+            </span>
+          </label>
+          <button class="modal-form-policy-button button" type="submit">
+            Send
+          </button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
