--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,14 @@
           </a>
           <ul class="header-list list">
             <li class="item">
-              <a class="header-link link current-page-link" href="./index.html"
-                >Studio</a
-              >
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a
+                class="header-link link current-page-link"
+                href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="item">
               <a class="header-link link" href="">Contacts</a>
@@ -291,7 +293,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-info-content">
+        <div class="footer-info-box">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-second-part">Studio</span>
           </a>
@@ -300,8 +302,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-socials-content">
-          <p class="footer-text-medium text">Social media</p>
+        <div class="footer-socials-box">
+          <p class="footer-text-medium text-medium">Social media</p>
           <ul class="footer-socials-list socials-list list">
             <li class="socials-item">
               <a href="" class="socials-link link"
@@ -332,6 +334,26 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form-box">
+          <p class="footer-text-medium text-medium">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label">
+              <input
+                class="footer-form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="footer-form-button button" type="submit">
+              Subscribe
+              <svg class="footer-form-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#subscribe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
