--- a/index.html
+++ b/index.html
@@ -451,53 +451,50 @@
           Leave your contacts and we will call you back
         </strong>
         <form class="modal-form">
-          <div class="modal-form-field">
-            <label class="modal-form-label" for="modal-form-name">Name</label>
-            <div class="modal-form-field-wrapper">
+          <label class="modal-form-label">
+            <span class="modal-form-label-text">Name</span>
+            <span class="modal-form-field">
               <input
                 class="modal-form-input"
                 type="text"
                 name="name"
-                id="modal-form-name"
                 required
               />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#modal-name"></use>
               </svg>
-            </div>
-          </div>
-          <div class="modal-form-field">
-            <label class="modal-form-label" for="modal-form-phone">Phone</label>
-            <div class="modal-form-field-wrapper">
+            </span>
+          </label>
+          <label class="modal-form-label">
+            <span class="modal-form-label-text">Phone</span>
+            <span class="modal-form-field">
               <input
                 class="modal-form-input"
                 type="tel"
                 name="phone"
-                id="modal-form-phone"
                 required
               />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#modal-phone"></use>
               </svg>
-            </div>
-          </div>
-          <div class="modal-form-field">
-            <label class="modal-form-label" for="modal-form-email">Email</label>
-            <div class="modal-form-field-wrapper">
+            </span>
+          </label>
+          <label class="modal-form-label">
+            <span class="modal-form-label-text">Email</span>
+            <span class="modal-form-field">
               <input
                 class="modal-form-input"
                 type="email"
                 name="email"
-                id="modal-form-email"
                 required
               />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#modal-email"></use>
               </svg>
-            </div>
-          </div>
-          <label class="modal-form-field">
-            <span class="modal-form-label">Comment</span>
+            </span>
+          </label>
+          <label class="modal-form-label">
+            <span class="modal-form-label-text">Comment</span>
             <textarea
               class="modal-form-textarea text-small"
               name="comment"
